--- a/src/components/Compose.css
+++ b/src/components/Compose.css
@@ -93,3 +93,9 @@
   background-color: white;
   box-shadow: inset 0 0 0 1px #3b558c;
 } */
+
+@media (max-width: 500px) {
+  .compose {
+    width: 90%;
+  }
+}
