mobile view edit

--- a/src/components/EmailRow.css
+++ b/src/components/EmailRow.css
@@ -89,3 +89,42 @@
     width: 35%;
   }
 }
+
+.emailRow__mobile {
+  display: flex;
+  flex-direction: row;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  max-height: 6rem;
+  background-color: white;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.emailRow__mobile__content {
+  display: flex;
+  flex-direction: column;
+  margin-left: 0.825rem;
+}
+.emailRow__mobile__content h4 {
+  text-transform: capitalize;
+}
+.emailRow__mobile__description {
+  max-width: 20rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.emailRow__mobile__description h5,
+.emailRow__mobile__description p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.emailRow__mobile__description p {
+  color: gray;
+}
+.emailRow__mobile__time {
+  margin-left: auto;
+}
