--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,60 @@
+* {
+  margin: 0;
+}
+.app {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+}
+
+/* .app__body {
+  display: flex;
+}
+.app__body__sidebar {
+  width: 15%;
+}
+.app__body__emails {
+  min-width: 85%;
+  max-width: 100%;
+} */
+/* ================= */
 .app {
   height: 100vh;
   display: flex;
   flex-direction: column;
 }
-
 .app__body {
   display: grid;
   grid-template-rows: 100%;
   grid-template-columns: 15% 85%;
 }
 
+@media (max-width: 992px) {
+  .app__body {
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: 25% 75%;
+  }
+}
 @media (max-width: 768px) {
   .app__body {
     display: grid;
     grid-template-rows: 100%;
     grid-template-columns: 25% 75%;
+  }
+}
+
+@media (max-width: 500px) {
+  .app__body {
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: 8% 90%;
+  }
+
+  .app__body__sidebar {
+    padding-left: 0.25rem;
+    flex: 1 1 2rem;
   }
 }
 /*
