--- a/src/components/Compose.css
+++ b/src/components/Compose.css
@@ -97,5 +97,11 @@
 @media (max-width: 500px) {
   .compose {
     width: 90%;
+    /* height: 60%; */
+  }
+}
+@media (max-width: 768px) {
+  .compose {
+    width: 80%;
   }
 }
