--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -5,7 +5,7 @@
   box-shadow: 0px 2px 5px -2px rgb(0, 0, 0, 0.5);
   text-transform: capitalize;
   font-size: 1rem;
-  padding: 1rem;
+  padding: 0.5rem;
   border-radius: 0.5em;
   max-width: 10rem;
   margin: 0 auto;
@@ -22,15 +22,19 @@
   display: flex;
   flex-direction: column;
   padding-right: 1rem;
-  /* width: 50%; */
+
   max-width: 250px;
-  /* height: 100vh; */
-  /* box-shadow: 1px 3px 3px 2px #b8b5b5; */
 }
 
 .sidebar__options__container {
   display: flex;
   flex-direction: column;
+  gap: 0.75rem;
+  color: steelblue;
+}
+
+.sidebar__options__container > * {
+  color: steelblue;
 }
 
 .sidebar__options__container .active {
